# game-of-the-amazons

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/benches/: amazon_benchmark.rs
core/src/: lib.rs  main.rs
godot/: Rust.gdextension  Scene.gd  Scene.tscn  Square.gd  Square.tscn  export_presets.cfg  icon.svg.import  portablejim-Chess-tile-Queen.svg.import  project.godot
godot_binding/: Cargo.toml
godot_binding/src/: lib.rs
src/: main.rs
