[package]
name = "amazons_core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "amazon_benchmark"
harness = false
